--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  padding: 0;
+  background-size: cover;
+  background-position: center;
+  font-family: 'Noto Sans', sans-serif;
+}
 .App {
   text-align: center;
 }
