--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   background-position: center;
   font-family: 'Noto Sans', sans-serif;
+  background-color: #4576ba;
 }
 .App {
   text-align: center;
