--- a/src/components/FlashNote/FlashNote.module.css
+++ b/src/components/FlashNote/FlashNote.module.css
@@ -53,12 +53,26 @@
 .note:focus {
 	cursor: auto;
 }
-.footer span {
+.footer button {
+    display: inline-block;
+    padding: 5px;
+    margin: 0;
+    margin-bottom: 2px;
+    margin-top: 8px;
+
+    border-radius: 4px;
+    box-shadow: 0px 1px 0px 0px #c9cfd4;
+
+    line-height: 24px;
     font-size: 14px;
     font-weight: 400;
-    color: rgb(82, 82, 82);
-    margin: 0;
+    color: #fff;
+    background-color: #4576ba;
+    border: none;
+    cursor: pointer;
 }
 .action {
 
+}
+.addNote {
 }
