--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,30 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-size: cover;
-  background-position: center;
-  font-family: 'Noto Sans', sans-serif;
-  background-color: #4576ba;
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+    background-position: center;
+    font-family: 'Noto Sans', sans-serif;
+    background-color: #4576ba;
 }
-.App {
-  text-align: center;
+.App-wrapper {
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+/*.App-logo {
+    height: 40vmin;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #09d3ac;
-}
+    color: #09d3ac;
+}*/
