--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -1,6 +1,10 @@
 
 
-
+.note_wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
 .note {
 	cursor: default;
 	width: 100%;
@@ -29,4 +33,13 @@
 
 .note:focus {
     cursor: auto;
+}
+.note_delete {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    color: #000;
+    cursor: pointer;
 }
