--- a/src/components/FlashNote/FlashNote.module.css
+++ b/src/components/FlashNote/FlashNote.module.css
@@ -24,36 +24,12 @@
     background: #f1f1f1; 
     box-sizing: border-box;  
 }
-.note {
-	cursor: default;
-	width: 100%;
-	box-sizing: border-box;
-
-	background: white;
-	padding: 10px;
-	border: none;
-	border-radius: 4px;
-    margin-bottom: 8px;
-    box-shadow: 0px 1px 0px 0px #c9cfd4;
-
-    text-align: left;
-    font-size: 14px;
-    line-height: 1.3;
-    font-weight: 400;
-    color: rgb(82, 106, 122);
-
-    transition: background-color 0.2s linear;
+.footer {
 }
+.action {
 
-.note:hover {
-	background-color: #e3f2fd;
-    cursor: pointer;
 }
-
-.note:focus {
-	cursor: auto;
-}
-.footer button {
+.addNote {
     display: inline-block;
     padding: 5px;
     margin: 0;
@@ -70,9 +46,4 @@
     background-color: #4576ba;
     border: none;
     cursor: pointer;
-}
-.action {
-
-}
-.addNote {
 }
