--- a/src/components/FlashNote/FlashNote.module.css
+++ b/src/components/FlashNote/FlashNote.module.css
@@ -1,55 +1,81 @@
-
 .pagination {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 .selectedPage {
-    font-weight: bold;
+  font-weight: bold;
 }
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-	padding: 10px;
-	margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+  margin: 10px;
 }
 .row {
-	display: flex;
-    align-items: flex-start;
-    padding: 10px;
-	margin: 10px;
+  display: flex;
+  align-items: flex-start;
+  padding: 10px;
+  margin: 10px;
 }
 .column_header {
-
 }
 .column {
-    width: 350px;
-    padding: 10px 15px;
-    margin: 10px;
-    border-radius: 4px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    background: #f1f1f1; 
-    box-sizing: border-box;  
+  width: 350px;
+  padding: 10px 15px;
+  margin: 10px;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background: #f1f1f1;
+  box-sizing: border-box;
 }
 .footer {
 }
 .action {
-
 }
 .addNote {
-    display: inline-block;
-    padding: 5px;
-    margin: 0;
-    margin-bottom: 2px;
-    margin-top: 8px;
+  display: inline-block;
+  padding: 5px;
+  margin: 0;
+  margin-bottom: 2px;
+  margin-top: 8px;
 
-    border-radius: 4px;
-    box-shadow: 0px 1px 0px 0px #c9cfd4;
+  border-radius: 4px;
+  box-shadow: 0px 1px 0px 0px #c9cfd4;
 
-    line-height: 24px;
-    font-size: 14px;
-    font-weight: 400;
-    color: #fff;
-    background-color: #4576ba;
-    border: none;
-    cursor: pointer;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
+  background-color: #4576ba;
+  border: none;
+  cursor: pointer;
+}
+.note {
+  cursor: default;
+  width: 100%;
+  box-sizing: border-box;
+
+  background: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  box-shadow: 0px 1px 0px 0px #c9cfd4;
+
+  text-align: left;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 400;
+  color: rgb(82, 106, 122);
+
+  transition: background-color 0.2s linear;
+}
+
+.note:hover {
+  background-color: #e3f2fd;
+  cursor: pointer;
+}
+
+.note:focus {
+  cursor: auto;
 }
