--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -1,45 +1,46 @@
-
-
 .note_wrap {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .note {
-	cursor: default;
-	width: 100%;
-	box-sizing: border-box;
+  cursor: default;
+  width: 100%;
+  box-sizing: border-box;
 
-	background: white;
-	padding: 10px;
-	border: none;
-	border-radius: 4px;
-    margin-bottom: 8px;
-    box-shadow: 0px 1px 0px 0px #c9cfd4;
+  background: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  box-shadow: 0px 1px 0px 0px #c9cfd4;
 
-    text-align: left;
-    font-size: 14px;
-    line-height: 1.3;
-    font-weight: 400;
-    color: rgb(82, 106, 122);
+  text-align: left;
+  font-size: 14px;
+  line-height: 1.3;
+  font-weight: 400;
+  color: rgb(82, 106, 122);
 
-    transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
 }
 
 .note:hover {
-	background-color: #e3f2fd;
-    cursor: pointer;
+  background-color: #e3f2fd;
+  cursor: pointer;
 }
 
 .note:focus {
-    cursor: auto;
+  cursor: auto;
 }
 .note_delete {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border: none;
-    background-color: transparent;
-    color: #000;
-    cursor: pointer;
+  position: absolute;
+  right: -20px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: transparent;
+  color: rgb(211, 2, 2);
+  cursor: pointer;
 }
