--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -4,6 +4,9 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+.heading {
+  font-size: 18px;
+}
 .note {
   cursor: default;
   width: 100%;
@@ -13,7 +16,8 @@
   padding: 10px;
   border: none;
   border-radius: 4px;
-  margin-bottom: 8px;
+  margin-top: 0;
+  margin-bottom: 18px;
   box-shadow: 0px 1px 0px 0px #c9cfd4;
 
   text-align: left;
@@ -36,6 +40,7 @@
 .note_delete {
   position: absolute;
   right: -20px;
+  bottom: 45px;
   display: inline-block;
   width: 30px;
   height: 30px;
